Limpieza de codigo

--- a/IdentityTest/appsettings.Development.json
+++ b/IdentityTest/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=ALGE-7MZL9L3;Initial Catalog=IdentityTest2;Integrated Security=True;Pooling=False"
+    "Default": "Server=tcp:identitycisco.database.windows.net,1433;Initial Catalog=SqlIdentity;Persist Security Info=False;User ID=ciscoIdendity;Password=Desperados#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
